<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff7cbaf4"
    >
    
	<TextView
		android:id="@+id/puzzle_info"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	/>
	    
    <com.mwlv.gotao.view.GoView
	    android:id="@+id/puzzle_goview"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/go_background"
	    />
	<TextView
		android:id="@+id/puzzle_comment"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="2"
	    android:scrollbars="vertical"  
	    android:textColor="#ff000000"
	    />
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" 
	    android:orientation="horizontal"
	    android:background="#ff7cbaf4"
  		>
  		<Button
		    android:id="@+id/puzzle_pre_btn"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="上一题"
		    android:layout_weight="1"
		    />
		<Button
		    android:id="@+id/puzzle_next_btn"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="下一题"
		    android:layout_weight="1"
		    />
		<Button
		    android:id="@+id/puzzle_back_btn"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/backBtn"
		    android:layout_weight="1"
		    />
		<Button
		    android:id="@+id/puzzle_reset_btn"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="重置"
		    android:layout_weight="1"
		    />
		<Button
		    android:id="@+id/puzzle_research_btn"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/researchBtn"
		    android:layout_weight="1"
		    />
		<Button
		    android:id="@+id/puzzle_return_btn"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/returnBtn"
		    android:layout_weight="1"
		    />
        </LinearLayout>
</LinearLayout>
